--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "re-resizable": "^6.3.2",
     "react": "^16.13.0",
     "react-autosize-textarea": "^7.0.0",
+    "websocket-extensions": "^0.1.4",
+    "elliptic": "^6.5.3",
+    "lodash": "^4.17.19",
     "react-dom": "^16.13.0",
     "react-ionic": "^0.0.0",
     "react-ionicons": "^3.1.4",
